--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "discord.js": "^14.20.0",
     "dotenv": "^16.5.0",
+    "moment": "^2.30.1",
+    "mysql2": "^3.14.1",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0"
   },
