--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,17 @@
       "@app/*": ["app/*"],
       "@registry": ["registry/index.ts"],
       "@database": ["database/index.ts"],
+      "@database/repos/*": ["database/repos/*"],
+      "@models/*": ["models/*"],
+      "@services/*": ["services/*"],
+      "@util/*": ["util/*"],
+      "@config": ["app/config.ts"],
       "@logger": ["logger.ts"]
     },
     "target": "ES2022",
     "module": "CommonJS",
     "moduleResolution": "Node",
+    "esModuleInterop": true,
     "noPropertyAccessFromIndexSignature": true,
     "strict": true,
     "noImplicitAny": true,
@@ -19,10 +25,7 @@
     "strictNullChecks": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules/@discordjs/typings"
-    ]
+    "typeRoots": ["./node_modules/@types", "./node_modules/@discordjs/typings"]
   },
   "include": ["src", "*.d.ts"],
   "exclude": ["node_modules"]
