--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "cs-bot-v3",
   "version": "1.0.0",
   "description": "",
@@ -6,19 +7,22 @@
   "scripts": {
     "dev": "tsx watch src/app/index.ts",
     "build": "tsc && tsc-alias",
-    "start": "node ."
+    "start": "node .",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/N8WM/cs-bot-v3.git"
   },
-  "author": "",
+  "author": "Nathan McCutchen",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/N8WM/cs-bot-v3/issues"
   },
   "homepage": "https://github.com/N8WM/cs-bot-v3#readme",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "discord.js": "^14.20.0",
     "dotenv": "^16.5.0",
     "moment": "^2.30.1",
@@ -27,9 +31,16 @@
     "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "eslint": "^9.29.0",
+    "jest": "^30.0.5",
+    "prisma": "^6.12.0",
+    "ts-jest": "^29.4.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3"
+  },
+  "prisma": {
+    "schema": "./prisma"
   }
 }
