--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,5 @@ DEV_GUILD_IDS=change_me
 GMAIL_ADDRESS=change_me@gmail.com
 GMAIL_PASSWORD=change_me
 
-# Postgres
-PGHOST=localhost
-PGPORT=5432
-PGUSER=postgres
-PGPASSWORD=change_me
-PGDATABASE=change_me
-DATABASE_URL=postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}?schema=public
+# Prisma
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
