--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "start": "node .",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "db:up": "docker compose --profile local up -d db",
-    "db:down": "docker compose --profile local down",
-    "db:logs": "docker compose --profile local logs -f db",
+    "dc:up": "docker compose up -d",
+    "dc:down": "docker compose down",
+    "dc:logs": "docker compose logs -f db",
+    "dc:logs:db": "docker compose logs -f db",
+    "dc:logs:vector": "docker compose logs -f vectorizer-worker",
+    "dc:logs:ollama": "docker compose logs -f ollama",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
-    "prisma:deploy": "npx prisma migrate deploy"
+    "prisma:deploy": "npx prisma migrate deploy && npx prisma generate"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,7 @@
     "dotenv": "^16.5.0",
     "moment": "^2.30.1",
     "mysql2": "^3.14.1",
+    "ollama": "^0.5.17",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0"
   },
