--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^5.3.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "eslint": "^9.29.0",
@@ -48,7 +49,8 @@
     "prisma": "^6.12.0",
     "ts-jest": "^29.4.0",
     "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "typescript-eslint": "^8.42.0"
   },
   "prisma": {
     "schema": "./prisma"
