--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "mysql2": "^3.14.1",
     "ollama": "^0.5.17",
     "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.3.1",
