--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ GMAIL_PASSWORD=change_me
 
 # Prisma
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+
+# Docker <-> Ollama
+OLLAMA_HOST=http://host.docker.internal:11434
