--- a/compose.yml
+++ b/compose.yml
@@ -6,10 +6,15 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_PASSWORD: postgres
+      PGDATA: /home/postgres/pgdata/data
+      OLLAMA_HOST: ${OLLAMA_HOST}
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata:/home/postgres/pgdata
+      - ./src/db/init:/docker-entrypoint-initdb.d:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -38,15 +43,15 @@ services:
         condition: service_completed_successfully
     environment:
       PGAI_VECTORIZER_WORKER_DB_URL: postgres://postgres:postgres@db:5432/postgres
-      OLLAMA_HOST: http://ollama:11434
+      OLLAMA_HOST: ${OLLAMA_HOST}
     command: [ "--poll-interval", "5s" ]
     restart: unless-stopped
 
-  ollama:
-    image: ollama/ollama
-    restart: unless-stopped
-    ports:
-      - "11434:11434"
+  # ollama:
+  #   image: ollama/ollama
+  #   restart: unless-stopped
+  #   ports:
+  #     - "11434:11434"
 
 volumes:
   pgdata:
